--- a/src/app/impressum/impressum.component.css
+++ b/src/app/impressum/impressum.component.css
@@ -7,7 +7,7 @@
 }
 
 .impressum__container > div {
-    padding-top: 20px;
+    padding-top: 12px;
     padding-bottom: 12px;
 }
 
